plugins {
    id 'java'
    id 'idea'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'com.jfrog.artifactory' version '4.24.14'
    id 'org.sonarqube' version '4.4.0.3356'
    id 'jacoco'
    id 'org.owasp.dependencycheck' version '9.0.10'
    id 'com.github.ben-manes.versions' version '0.39.0'
    id 'com.gorylenko.gradle-git-properties' version '2.4.1'
    id 'com.intershop.gradle.jaxb' version '7.0.0'
}

artifactoryPublish.skip = true

group = 'fi.vm.yti'
sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
    mavenLocal()
    mavenCentral {
        content { excludeGroupByRegex "fi\\.vm\\.yti.*" }
    }
    jcenter {
        content { excludeGroupByRegex "fi\\.vm\\.yti.*" }
    }

    // put your artifactory parameters to $HOME/.gradle/gradle.properties
    if (project.hasProperty('artifactoryUrl')) {
        maven {
            url "$artifactoryUrl"
            credentials {
                username "$artifactoryUsername"
                password "$artifactoryPassword"
            }
        }
    }
    maven {
        url 'https://repo.spring.io/milestone'
        content { excludeGroupByRegex "fi\\.vm\\.yti.*" }
    }
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2023.0.0'
    }
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springframework.security:spring-security-core"
    implementation "org.springframework.boot:spring-boot-starter-tomcat"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.security:spring-security-config"
    implementation "org.springframework.security:spring-security-web"
    implementation "org.springframework.boot:spring-boot-starter-webflux"

    implementation "fi.vm.yti:yti-spring-security:0.4.0"
    implementation "fi.vm.yti:yti-spring-migration:0.3.0"
    implementation "fi.vm.yti:yti-common-backend:0.2.0-SNAPSHOT"

    implementation "org.springframework.cloud:spring-cloud-starter-config"

    implementation "ch.qos.logback:logback-core"
    implementation "net.logstash.logback:logstash-logback-encoder:7.2"
    implementation "jakarta.validation:jakarta.validation-api:3.0.2"

    implementation "org.opensearch.client:opensearch-java:2.9.0"
    implementation "org.opensearch.client:opensearch-rest-client:2.3.0"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2"

    implementation "org.apache.jena:jena-core:4.10.0"
    implementation "org.apache.jena:jena-arq:4.10.0"
    implementation "org.apache.jena:jena-rdfconnection:4.10.0"
    implementation "org.apache.jena:jena-querybuilder:4.10.0"
    implementation "com.google.guava:guava:33.0.0-jre"

    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
    implementation 'com.sun.xml.bind:jaxb-impl:4.0.5'

    compileOnly "org.springframework.boot:spring-boot-configuration-processor"
    compileOnly "org.jetbrains:annotations:23.0.0"

    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "com.jayway.jsonpath:json-path-assert:2.7.0"
    testImplementation "org.mockito:mockito-core:4.8.0"
    testImplementation "net.bytebuddy:byte-buddy:1.12.22"
}

test {
    useJUnitPlatform()
}

sonarqube {
    properties {
        property "sonar.projectKey", "yti-terminology-api"
        property "sonar.projectName", "yti-terminology-api"
        property "sonar.dependencyCheck.reportPath", "$projectDir/build/reports/dependency-check-report.xml"
        property "sonar.dependencyCheck.htmlReportPath", "$projectDir/build/reports/dependency-check-report.html"
    }
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

test {
    useJUnitPlatform()
}

dependencyCheck {
    format = 'ALL'
    autoUpdate = false
    analyzers {
        centralEnabled = false
    }
    data {
        directory = System.getenv('OWASP_DATA_DIR')
    }
}

jaxb {
    // generate java code from schema (skipped from default build)
    // Regenerate classes by running ./gradlew build -PntrfGenerate
    if (project.hasProperty('ntrfGenerate')) {
        javaGen {
            ntrf {
                binding = file('src/main/resources/import/ntrf/bindings.xjb')
                schema = file('src/main/resources/import/ntrf/NTRF.xsd')
                outputDir = file('src/main/java')
                packageName = 'fi.vm.yti.terminology.api.v2.ntrf'
            }
        }
    }
}
